# SLAM_AR_Android

./: .gitignore  README.md  build.gradle  settings.gradle
OpenCVLibrary340/: build.gradle
OpenCVLibrary340/src/main/: AndroidManifest.xml
OpenCVLibrary340/src/main/java/org/opencv/android/: JavaCameraView.java
OpenCVLibrary450/src/main/java/org/opencv/android/: OpenCVLoader.java
OpenCVLibrary450/src/main/java/org/opencv/calib3d/: Calib3d.java  UsacParams.java
OpenCVLibrary450/src/main/java/org/opencv/core/: Core.java
OpenCVLibrary450/src/main/java/org/opencv/features2d/: AffineFeature.java  SIFT.java
OpenCVLibrary450/src/main/java/org/opencv/imgproc/: Imgproc.java
OpenCVLibrary450/src/main/java/org/opencv/ml/: RTrees.java
OpenCVLibrary450/src/main/java/org/opencv/videoio/: Videoio.java
SLAM_AR_Android_Demo_Repack_20210225/: output-metadata.json
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/martin/ads/slamar/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CameraSettings.yaml  config.txt
app/src/main/cpp/: Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  UIUtils.cpp  UIUtils.h  Utils.cpp  Utils.h  native-lib.cpp
app/src/main/cpp/include/: Common.h  Converter.h  KeyFrame.h  LoopClosing.h  ORBVocabulary.h  System.h  Tracking.h  Viewer.h
app/src/main/cpp/opencv/include/opencv/: cv.h
app/src/main/cpp/src/: Frame.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  System.cc  Tracking.cc
app/src/main/java/com/martin/ads/: Quaternion.java
app/src/main/java/com/martin/ads/constant/: GlobalConstant.java
app/src/main/java/com/martin/ads/rendering/gles/: BitmapTexture.java  GLAbsProgram.java  GLPassThroughProgram.java  GLRootView.java  GLSphere2DProgram.java  OrthoFilter.java  Sphere3D.java
app/src/main/java/com/martin/ads/rendering/render/: ArObjectWrapper.java  GLES10Demo.java  ObjRendererWrapper.java  ObjectRenderer.java
app/src/main/java/com/martin/ads/slamar/: NativeHelper.java
app/src/main/java/com/martin/ads/ui/: ArCamUIActivity.java  CameraGLView.java  CameraGLViewBase.java  ModelActivity.java  TestObjActivity.java
app/src/main/java/com/martin/ads/utils/: BitmapUtils.java  BufferUtils.java  FpsMeter.java  Logger.java  ShaderUtils.java  TextureUtils.java  TouchHelper.java  ZipHelper.java
app/src/main/res/layout/: activity_test.xml  ar_ui_content.xml  pending_layout.xml  toolbar.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/martin/ads/slamar/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
